# otp

./: .env.example  Dockerfile  Makefile  pyproject.toml
.github/workflows/: deploy.yml
migrations/models/: 0_20221028224151_init.py  0_20221104152713_init.py  0_20221105203447_init.py  1_20221107115226_update.py  2_20221118182948_update.py  3_20221118182948_update.py
otp/: app.py  depends.py  exceptions.py  models.py  responses.py  settings.py  static.py  tfa.py  utils.py  wechat.py
otp/routers/: __init__.py  auth.py  feedback.py  icon.py  otp.py  user.py
static/tfa/: tfa.json
